--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,10 @@
         android:theme="@style/Theme.SightSafe"
         tools:targetApi="31">
         <activity
-            android:name="com.example.user.RegisterUser"
+            android:name=".user.RegisterUser"
             android:exported="false" />
         <activity
-            android:name="com.example.user.LoginUser"
+            android:name=".user.LoginUser"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
@@ -28,6 +28,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
