--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32" />
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="28" />
@@ -18,10 +20,17 @@
         android:theme="@style/Theme.SightSafe"
         tools:targetApi="31">
         <activity
-            android:name=".ui.ImageUpload"
+            android:name=".ui.ResultActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.HomeActivity"
+            android:name=".ui.ProfileBottomSheet"
+            android:exported="false"
+            android:theme="@style/Theme.SightSafe" />
+        <activity
+            android:name=".ui.HistoryActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.ImageUpload"
             android:exported="false" />
         <activity
             android:name=".ui.WelcomeActivity"
@@ -49,7 +58,7 @@
 
         <provider
             android:name="androidx.core.content.FileProvider"
-            android:authorities="${applicationId}.fileprovider"
+            android:authorities="com.example.sightsafe"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
